--- a/storm-processor/pom.xml
+++ b/storm-processor/pom.xml
@@ -113,7 +113,12 @@
             <artifactId>gson</artifactId>
             <version>2.2.2</version>
             <scope>compile</scope>
-        </dependency>	           			
+        </dependency>        
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka_2.9.2</artifactId>
+			<version>0.8.0-beta1</version>
+		</dependency>        	           			
 	</dependencies>
 
 	<build>
